
	* src/core/exmpp_xml.erl: Change default options! Namespace support is
	enabled and names are returned as atom.

	* configure.ac: Define HAVE_EXPAT when the Expat XML port driver is
	built.

	* src/core/exmpp_compress.erl (get_engine_from_options),
	src/core/exmpp_tls.erl (get_engine_from_args): Fix behaviour which was
	broken by previous commit.

2008-10-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Add functions to serialize JIDs using their
	STRINGPREP'd version.

2008-10-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Rename get_lname_as_atom/1 and
	get_lname_as_list/1 to get_name_as_atom/1 and get_name_as_list/1
	respectively. Add add_autoload_known_nss/1, add_autoload_known_names/1
	and add_autoload_known_attrs/1 to populate Exmpp application
	environment with autoloaded known lists.
	(get_ns_as_atom, get_ns_as_list): Use the new as_atom/1 and as_list/1
	functions.

	* testsuite/check_xml_element_handlers.erl: Updated the old testsuite
	as reference.

2008-09-30  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_xml: Add functions to get the local name of an
	element.

2008-09-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_iq.erl (error): The case where the function was
	called with an #iq record and a condition (atom) was not implemented,
	causing a crash.

2008-09-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl, src/core/exmpp_iq.erl,
	src/core/exmpp_presence.erl, src/core/exmpp_message.erl: Typo in
	modules short description.

	* src/core/exmpp_presence.erl: In documentation, use "presence stanza"
	instead of "<presence/>".
	(error): Rewrite to behave like exmpp_iq:error/2.
	(set_show, set_status, set_priority): Always use
	exmpp_xml:append_child/2 so the caller better controls the order of
	the elements.

	* src/core/exmpp_message.erl: Add functions to create message stanzas.